2001-11-07  Don Porter <dgp@users.sourceforge.net>

	* do.tcl: updated to use [BodyAsCaller] and [CommandAsCaller]
	so that proper ::errorInfo management is achieved.

	* rswitch.tcl:
	* ascaller.tcl (new-file): factored out utility procs from
	rswitch.tcl so they can be used by other conotrol commands.
	* tclIndex: generated

	* rswitch.test: corrected syntax error [Bug 478989]

2001-11-07  Reinhard Max  <max@suse.de>

	* do.tcl: 
	* do.test: New files: define and test [control::do].
	* control.tcl:
	* control.n: Added support and documentation for [control::do].
	* tclIndex: Generated.

2001-11-03  Don Porter <dgp@users.sourceforge.net>

	* rswitch.tcl: Replaced bogus copyright notice with public
	domain boilerplate.
	* rswitch.test: Added tests and test source material.

	* pkgIndex.tcl:
	* control.tcl: Addition of rswitch means bump 0.0 -> 0.1.
	
	* genIndex (new file):
	* index.tcl (deleted file): renamed index.tcl -> genIndex so
	it won't be mistakenly installed anymore.  Purpose of genIndex
	is to regenerate the tclIndex file.  [Bug 475846]
	* tclIndex: Generated.

2001-11-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* rswitch.tcl: checked in Don's usenet posted implementation
	* rswitch.test: some tests for the rswitch.tcl command.

2001-08-21  Don Porter <dgp@users.sourceforge.net>

	* control.tcl:
	* control.n: Added and documented new commands [control::control]
	and [control::assert].
	* pkgIndex.tcl: Updated to reflect Tcl 8.2 dependence.
	* tclIndex: Generated

	* assert.tcl: New file: implements [control::assert].

2001-08-21  Don Porter <dgp@users.sourceforge.net>

	* index.tcl: New file: Utility script for generating tclIndex.
	* tclIndex: Generated.

        * no-op.tcl:
	* no-op.test: New files: Define and test [control::no-op].

        * control.tcl:
	* control.n:
	* pkgIndex.tcl:
	* ChangeLog: New files: Main provide script, documentation, and
	hand-crafted index script of new control package.
