@@ -14,5 +14,6 @@ set auto_index(::control::assert) [list source [file join $dir assert.tcl]]
 set auto_index(::control::no-op) [list source [file join $dir no-op.tcl]]
 set auto_index(::control::CommandAsCaller) [list source [file join $dir ascaller.tcl]]
 set auto_index(::control::BodyAsCaller) [list source [file join $dir ascaller.tcl]]
+set auto_index(::control::ErrorInfoAsCaller) [list source [file join $dir ascaller.tcl]]
 set auto_index(::control::do) [list source [file join $dir do.tcl]]
 set auto_index(::control::rswitch) [list source [file join $dir rswitch.tcl]]
